--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -1,20 +1,60 @@
-/* /var/www/rust_server_cyb3ria_xyz/static/css/chat.css */
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400&display=swap');
 
 #messages {
     list-style-type: none;
     padding: 0;
     width: 100%;
-    max-width: 800px; /*  добавим  ограничение ширины */
+    max-width: 800px;
     max-height: 75vh;
     overflow-y: auto;
-    border: 1px solid #444;
-    background-color: #2e2e2e;
+    border: 1px solid #00829b; /* Тонкая синяя рамка */
+    background-color: #0a0a0a; /* Глубокий чёрный */
     margin-bottom: 20px;
+    font-family: 'Orbitron', sans-serif;
+    color: #eee;
+    position: relative; /* Позиционируем контейнер для вложенных элементов */
 }
 
+/* Сообщения */
 #messages li {
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #2e2e2e; /* Сделали фон таким же, как у контейнера */
-    border-bottom: none; /* Убрали нижнюю границу */
+    background-color: #0a0a0a; /* Чёрный фон */
+    border-left: 2px solid #00829b; /* Тонкий синий акцент */
+}
+
+/* Чужие сообщения */
+.message-received {
+    color: #ccc;
+    border-left-color: #ff534b; /* Активный красный */
+}
+
+/* Мои сообщения */
+.message-sent {
+    color: #00829b;
+    border-left-color: #00829b;
+}
+
+/* Фиксируем отступы и положение */
+#messages li:last-child {
+    margin-bottom: 0;
+}
+
+/* Если есть кнопки или элементы внутри #messages */
+.message-toggle {
+    position: absolute; /* Абсолютное позиционирование для фиксированного расположения */
+    top: 10px; /* Отступ сверху */
+    right: 10px; /* Отступ справа */
+    background-color: #ddd;
+    border: none;
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    z-index: 200;
+    transition: background 0.3s ease;
+    border-radius: 6px;
 }
